--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,31 +6,54 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \;\
+	display 'Reloaded tmux config.'
+
+set -g set-titles on
 
 #  modes
 setw -g clock-mode-colour colour5
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+setw -g mode-style 'fg=colour175 bg=colour33 bold'
 
+#
+bind R refresh-client
+#
 bind j resize-pane -D 5 
 bind k resize-pane -U 5 
 bind l resize-pane -L 5 
 bind h resize-pane -R 5 
 
 # statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=colour20 fg=colour212 dim'
-set -g status-left ''
+#set -g status-position bottom
+#set -g status-justify left
+#set -g status-style 'bg=colour175 fg=colour33 dim'
+#set -g status-left ''
 #set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
-set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
+#set -g status-right '#{cpu_bg_color} CPU: #{cpu_percentage} | %a %h-%d %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
+
+#Nova Theme
+set -g @nova-rows 0
+set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
+set -g @nova-segments-0-left "mode"
+set -g @nova-segments-0-right "whoami"
+
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+
+set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+set -g @nova-segment-mode-colors "#50fa7b #282a36"
+
+set -g @nova-segment-whoami "#(whoami)@#h"
+set -g @nova-segment-whoami-colors "#50fa7b #282a36"
 
 #plugins
 #git clone https://github.cor/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu':w
-
+#set -g @plugin 'tmux-plugins/tmux-cpu'
+set-option -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'o0th/tmux-nova'
 
 run '~/.tmux/plugins/tpm/tpm'
