--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,7 +53,7 @@ set -g @nova-segment-whoami-colors "#50fa7b #282a36"
 #git clone https://github.cor/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-cpu'
-set-option -g @plugin 'b0o/tmux-autoreload'
+#set-option -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'o0th/tmux-nova'
 
 run '~/.tmux/plugins/tpm/tpm'
