--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -12,10 +12,10 @@ font:
     #family: 'Victor Mono'
       #family: 'Hurmit Nerd Font Mono'
     #family: 'monospace'
-    family: 'Monoid Nerd Font Mono'
+    family: 'Monoid NF'
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Retina
 
 colors:
   primary:
