--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
-set -g terminal-overrides ',screen-256color:Tc'
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",screen-256color:Tc"
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
