--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -2,17 +2,8 @@ font:
   size: 10
   # Normal (roman) font face
   normal:
-    # Font family
-    #
-    # Default:
-    #   - (macOS) Menlo
-    #   - (Linux) monospace
-    #   - (Windows) Consolas
-    #family: 'Iosevka'
-    #family: 'Victor Mono'
-      #family: 'Hurmit Nerd Font Mono'
-    #family: 'monospace'
-    family: 'Monoid NF'
+
+    family: 'ShureTechMono Nerd Font'
 
     # The `style` can be specified to pick a specific face.
     style: Retina
