--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,10 @@ unbind r
 bind r source-file ~/.tmux.conf \;\
 	display 'Reloaded tmux config.'
 
+set -g focus-events on
 set -g set-titles on
+
+set-window-option -g mode-keys vi
 
 #  modes
 setw -g clock-mode-colour colour5
@@ -23,13 +26,9 @@ bind k resize-pane -U 5
 bind l resize-pane -L 5 
 bind h resize-pane -R 5 
 
-# statusbar
-#set -g status-position bottom
-#set -g status-justify left
-#set -g status-style 'bg=colour175 fg=colour33 dim'
-#set -g status-left ''
-#set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
-#set -g status-right '#{cpu_bg_color} CPU: #{cpu_percentage} | %a %h-%d %H:%M '
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 set -g status-right-length 50
 set -g status-left-length 20
 
