--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -10,7 +10,7 @@ shadow = true;
 
 shadow-exclude = [
 	"name *= 'polybar'",
-	"name *= 'zoom'"
+	"name *= 'zoom'",
 ];
 
 #opacity
@@ -21,7 +21,7 @@ opacity-rule = [
 ];
 
 
-inactive-opacity = 1;
+inactive-opacity = 0.9;
 active-opacity = 1;
 frame-opacity = 1;
 
