--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -10,26 +10,38 @@ font:
 
 colors:
   primary:
-    background: '#1D1C1A'
-    foreground: '#c5e2e2'
+    background: '0x191724'
+    foreground: '0xe0def4'
+  cursor:
+    text: '0x191724'
+    cursor: '0x796268'
+  vi_mode_cursor:
+    text: '0x191724'
+    cursor: '0x796268'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: CellForeground
+    background: '0x2A2738'
   normal:
-    black:   '#1D1C1A'
-    red:     '#DD5099'
-    green:   '#189CEA'
-    yellow:  '#39AEA9'
-    blue:    '#6CCCE1'
-    magenta: '#B6D0B6'
-    cyan:    '#DD5099'
-    white:   '#FAF8F6'
+    black:   '0x6e6a86'
+    red:     '0xeb6f92'
+    green:   '0x9ccfd8'
+    yellow:  '0xf6c177'
+    blue:    '0x31748f'
+    magenta: '0xc4a7e7'
+    cyan:    '0xebbcba'
+    white:   '0xe0def4'
   bright:
-    black:   '#8b8c8c'
-    red:     '#DD5099'
-    green:   '#189CEA'
-    yellow:  '#39AEA9'
-    blue:    '#6CCCE1'
-    magenta: '#B6D0B6'
-    cyan:    '#DD5099'
-    white:   '#c5e2e2'
+    black:   '0x6e6a86'
+    red:     '0xeb6f92'
+    green:   '0x9ccfd8'
+    yellow:  '0xf6c177'
+    blue:    '0x31748f'
+    magenta: '0xc4a7e7'
+    cyan:    '0xebbcba'
+    white:   '0xe0def4'
 
 cursor: 
   style: Block
