--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -10,14 +10,14 @@ shadow = true;
 
 shadow-exclude = [
 	"name *= 'polybar'",
-	"name *= 'zoom'",
+	"name *= 'zoom'"
 ];
 
 #opacity
 #
 opacity-rule = [
-  "90:class_g = 'Alacritty' && focused",
-  "60:class_g = 'Alacritty' && !focused"
+#  "90:class_g = 'Alacritty' && focused",
+#  "60:class_g = 'Alacritty' && !focused"
 ];
 
 
