--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,12 +1,12 @@
 font:
-  size: 12
+  size: 9
   # Normal (roman) font face
   normal:
 
-    family: 'ShureTechMono Nerd Font'
+    family: 'Monoid Nerd Font'
 
     # The `style` can be specified to pick a specific face.
-    style: Retina
+    style: Regular
 
 colors:
   primary:
