--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,12 +1,12 @@
 font:
-  size: 9
+  size: 11
   # Normal (roman) font face
   normal:
 
-    family: 'Monoid Nerd Font'
+    family: 'Iosevka Term SS04'
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Bold
 
 colors:
   primary:
