--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,7 +32,6 @@ bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selectio
 set -g status-right-length 50
 set -g status-left-length 20
 
-#Nova Theme
 set -g @nova-rows 0
 set -g @nova-nerdfonts true
 set -g @nova-nerdfonts-left 
@@ -42,11 +41,19 @@ set -g @nova-segments-0-right "whoami"
 
 set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
 
+set -g "@nova-pane-active-border-style" "#44475a"
+set -g "@nova-pane-border-style" "#282a36"
+set -g "@nova-status-style-bg" "#1d485f"
+set -g "@nova-status-style-fg" "#d8dee9"
+set -g "@nova-status-style-active-bg" "#feaf3c"
+set -g "@nova-status-style-active-fg" "#2e3540"
+set -g "@nova-status-style-double-bg" "#2d3540"
+
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-set -g @nova-segment-mode-colors "#50fa7b #282a36"
+set -g @nova-segment-mode-colors "#008eab #222222"
 
 set -g @nova-segment-whoami "#(whoami)@#h"
-set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+set -g @nova-segment-whoami-colors "#008eab #222222"
 
 #plugins
 #git clone https://github.cor/tmux-plugins/tpm ~/.tmux/plugins/tpm
