update thai fonts

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -73,7 +73,7 @@ adjust_baseline 0
 
 symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
-symbol_map U+0E01-U+0E5B Tlwg Mono
+symbol_map U+0E01-U+0E5B TLWG TypeWriter Bold
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
