Config kitty tab command

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1308,6 +1308,11 @@ selection_foreground #08131a
 # map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
 
+map kitty_mod+. next_tab
+map kitty_mod+, previous_tab
+map kitty_mod+alt+. move_tab_forward
+map kitty_mod+alt+, move_tab_backward
+
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab, and any number larger than the last tab being the last tab::
@@ -1342,9 +1347,9 @@ selection_foreground #08131a
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-# map kitty_mod+equal     change_font_size all +2.0
-# map kitty_mod+minus     change_font_size all -2.0
-# map kitty_mod+backspace change_font_size all 0
+map kitty_mod+equal     change_font_size all +2.0
+map kitty_mod+minus     change_font_size all -2.0
+map kitty_mod+backspace change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
 
