--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,17 @@ set-window-option -g mode-keys vi
 setw -g clock-mode-colour colour5
 setw -g mode-style 'fg=colour175 bg=colour33 bold'
 
+#Suspend 
+set -g @suspend_key 'F12'
+set -g @suspend_suspended_options " \
+#  status-left-style::bg=brightblack\\,fg=black bold dim, \
+#  window-status-current-style:gw:bg=brightblack\\,fg=black, \
+#  window-status-last-style:gw:fg=brightblack, \
+#  window-status-style:gw:bg=black\\,fg=brightblack, \
+  @mode_indicator_custom_prompt:: ---- , \
+  @mode_indicator_custom_mode_style::bg=brightblack\\,fg=black, \
+"
+
 #
 bind R refresh-client
 #
@@ -29,37 +40,73 @@ bind h resize-pane -R 5
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-set -g status-right-length 50
-set -g status-left-length 20
+#set -g status-right '%Y-%m-%d %H:%M #{tmux_mode_indicator}'
 
-set -g @nova-rows 0
-set -g @nova-nerdfonts true
-set -g @nova-nerdfonts-left 
-set -g @nova-nerdfonts-right 
-set -g @nova-segments-0-left "mode"
-set -g @nova-segments-0-right "whoami"
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify left
+#set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=#d8dee9,bg=#1d485f
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=#feaf3c]#H "
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
+set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=#feaf3c]%Y-%m-%d #{tmux_mode_indicator}"
+#set-window-option -g window-status-style fg=colour244
+#set-window-option -g window-status-style bg=default
+#set-window-option -g window-status-current-style fg=#d8dee9
+#set-window-option -g window-status-current-style bg=#feaf3c
 
-set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+setw -g window-status-current-style 'fg=#1d485f bg=#feaf3c bold'
+setw -g window-status-current-format ' #I  #W #F '
 
-set -g "@nova-pane-active-border-style" "#44475a"
-set -g "@nova-pane-border-style" "#282a36"
-set -g "@nova-status-style-bg" "#1d485f"
-set -g "@nova-status-style-fg" "#d8dee9"
-set -g "@nova-status-style-active-bg" "#feaf3c"
-set -g "@nova-status-style-active-fg" "#2e3540"
-set -g "@nova-status-style-double-bg" "#2d3540"
+setw -g window-status-style 'fg=#1d485f bg=#008eab'
+setw -g window-status-format ' #I  #W #F '
 
-set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-set -g @nova-segment-mode-colors "#008eab #222222"
+#setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
-set -g @nova-segment-whoami "#(whoami)@#h"
-set -g @nova-segment-whoami-colors "#008eab #222222"
+
+#set -g status-right-length 50
+#set -g status-left-length 20
+#
+#set -g @nova-rows 0
+#set -g @nova-nerdfonts true
+#set -g @nova-nerdfonts-left 
+#set -g @nova-nerdfonts-right 
+#set -g @nova-segments-0-left "mode"
+#set -g @nova-segments-0-right "whoami indicator"
+#
+#set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+#
+#set -g "@nova-pane-active-border-style" "#44475a "
+#set -g "@nova-pane-border-style" "#282a36 "
+#set -g "@nova-status-style-bg" "#1d485f "
+#set -g "@nova-status-style-fg" "#d8dee9 "
+#set -g "@nova-status-style-active-bg" "#feaf3c "
+#set -g "@nova-status-style-active-fg" "#2e3540 "
+#set -g "@nova-status-style-double-bg" "#2d3540"
+#
+#set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+#set -g @nova-segment-mode-colors "#008eab #222222"
+#
+#set -g @nova-segment-whoami "#(whoami)@#h"
+#set -g @nova-segment-whoami-colors "#008eab #222222"
+#
+#set -g @nova-segment-indicator "#{tmux_mode_indicator}"
+#set -g @nova-segment-indicator-colors "#008eab #222222"
 
 #plugins
-#git clone https://github.cor/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-cpu'
 #set-option -g @plugin 'b0o/tmux-autoreload'
-set -g @plugin 'o0th/tmux-nova'
+
+# suspend local for nested tmux
+set -g @plugin 'MunifTanjim/tmux-suspend'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+#set -g @plugin 'o0th/tmux-nova'
 
 run '~/.tmux/plugins/tpm/tpm'
