--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,24 +48,20 @@ set-option -g status-justify left
 #set-option -g status-keys vi
 set-option -g status-position bottom
 set-option -g status-style fg=#d8dee9,bg=#1d485f
-set-option -g status-left-length 20
+set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=#feaf3c]#H "
+set-option -g status-left "#[fg=#545d65,bg=#77dbf4] [#H] "
 set-option -g status-right-length 140
 set-option -g status-right-style default
-set-option -g status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
+set-option -g status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 3-5 -d ' ' | cut -f 1 -d ',') "
 set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=#feaf3c]%Y-%m-%d #{tmux_mode_indicator}"
-#set-window-option -g window-status-style fg=colour244
-#set-window-option -g window-status-style bg=default
-#set-window-option -g window-status-current-style fg=#d8dee9
-#set-window-option -g window-status-current-style bg=#feaf3c
 
-setw -g window-status-current-style 'fg=#1d485f bg=#feaf3c bold'
-setw -g window-status-current-format ' #I  #W #F '
-
+#Windows
+setw -g window-status-current-style 'fg=#0d485f bg=#feaf3c bold'
+setw -g window-status-current-format ' #I  #W '
 setw -g window-status-style 'fg=#1d485f bg=#008eab'
-setw -g window-status-format ' #I  #W #F '
-
+setw -g window-status-format ' #I  #W '
+setw -g window-status-separator " "
 
 #plugins
 #git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
