--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,10 +21,10 @@ setw -g mode-style 'fg=colour175 bg=colour33 bold'
 #Suspend 
 set -g @suspend_key 'F12'
 set -g @suspend_suspended_options " \
-#  status-left-style::bg=brightblack\\,fg=black bold dim, \
-#  window-status-current-style:gw:bg=brightblack\\,fg=black, \
-#  window-status-last-style:gw:fg=brightblack, \
-#  window-status-style:gw:bg=black\\,fg=brightblack, \
+  status-left-style::bg=brightblack\\,fg=black bold dim, \
+  window-status-current-style:gw:bg=brightblack\\,fg=black, \
+  window-status-last-style:gw:fg=brightblack, \
+  window-status-style:gw:bg=black\\,fg=brightblack, \
   @mode_indicator_custom_prompt:: ---- , \
   @mode_indicator_custom_mode_style::bg=brightblack\\,fg=black, \
 "
@@ -40,7 +40,8 @@ bind h resize-pane -R 5
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-#set -g status-right '%Y-%m-%d %H:%M #{tmux_mode_indicator}'
+set -g @online_icon "ok"
+set -g @offline_icon "offline!"
 
 set-option -g status on
 set-option -g status-interval 1
@@ -50,27 +51,31 @@ set-option -g status-position bottom
 set-option -g status-style fg=#d8dee9,bg=#1d485f
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=#545d65,bg=#77dbf4] [#H] "
+set-option -g status-left "#[fg=#545d65,bg=#77dbf4]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
-set-option -g status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 3-5 -d ' ' | cut -f 1 -d ',') "
-set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=#feaf3c]%Y-%m-%d #{tmux_mode_indicator}"
+set-option -g status-right '#[fg=#1d485f,bg=#dd998a] CPU: #{cpu_percentage} #[bg=#c6e8f1] MEM: #{ram_percentage} '
+
+#show battery on laptop
+if-shell -b '[ "$(hostname) == *"laptop"* ]' \
+	"set-option -ag status-right \"#[bg=#5fb1c2] BAT: #{battery_percentage} \""
+
+set-option -ag status-right "#[bg=#fedaae] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
 
 #Windows
 setw -g window-status-current-style 'fg=#0d485f bg=#feaf3c bold'
 setw -g window-status-current-format ' #I  #W '
 setw -g window-status-style 'fg=#1d485f bg=#008eab'
 setw -g window-status-format ' #I  #W '
-setw -g window-status-separator " "
+setw -g window-status-separator ""
 
 #plugins
 #git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-cpu'
-#set-option -g @plugin 'b0o/tmux-autoreload'
-
-# suspend local for nested tmux
 set -g @plugin 'MunifTanjim/tmux-suspend'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 run '~/.tmux/plugins/tpm/tpm'
