--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set-option -g status-position bottom
 set-option -g status-style fg=#d8dee9,bg=#1d485f
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=#545d65,bg=#77dbf4]:[#S]@#H "
+set-option -g status-left "#[fg=#feaf3c]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
 set-option -g status-right '#[fg=#1d485f,bg=#dd998a] CPU: #{cpu_percentage} #[bg=#c6e8f1] MEM: #{ram_percentage} '
