--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,8 +57,9 @@ set-option -g status-right-style default
 set-option -g status-right '#[fg=#1d485f,bg=#dd998a] CPU: #{cpu_percentage} #[bg=#c6e8f1] MEM: #{ram_percentage} '
 
 #show battery on laptop
-if-shell -b '[ "$(hostname) == *"laptop"* ]' \
-	"set-option -ag status-right \"#[bg=#5fb1c2] BAT: #{battery_percentage} \""
+if-shell '[[ "$(hostname)" == *"laptop"* ]]' {
+	set-option -ag status-right "#[bg=#5fb1c2] BAT: #{battery_percentage} "
+}
 
 set-option -ag status-right "#[bg=#fedaae] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
 
