--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,7 +48,7 @@ set-option -g status-interval 1
 set-option -g status-justify left
 #set-option -g status-keys vi
 set-option -g status-position bottom
-set-option -g status-style fg=#d8dee9,bg=#1d485f
+set-option -g status-style "fg=#d8dee9,bg=#1d485f"
 set-option -g status-left-length 40
 set-option -g status-left-style default
 set-option -g status-left "#[fg=#feaf3c]:[#S]@#H "
