split-window with |,"

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,13 @@ bind k resize-pane -U 5
 bind l resize-pane -L 5 
 bind h resize-pane -R 5 
 
+#split pane with | and - 
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
