--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",screen-256color:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind C-b
 set-option -g prefix C-a
@@ -32,10 +32,13 @@ set -g @suspend_suspended_options " \
 #
 bind R refresh-client
 #
-bind j resize-pane -D 5 
-bind k resize-pane -U 5 
-bind l resize-pane -L 5 
-bind h resize-pane -R 5 
+#bind j resize-pane -D 5 
+#bind k resize-pane -U 5 
+#bind l resize-pane -L 5 
+#bind h resize-pane -R 5 
+
+#select pane
+
 
 #split pane with | and - 
 bind | split-window -h
