--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,7 +46,6 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
@@ -58,20 +57,20 @@ set-option -g status-interval 1
 set-option -g status-justify left
 #set-option -g status-keys vi
 set-option -g status-position bottom
-set-option -g status-style "fg=#d8dee9,bg=#1d485f"
+set-option -g status-style "bg=colour4"
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=#feaf3c]:[#S]@#H "
+set-option -g status-left "#[fg=colour0]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
-set-option -g status-right '#[fg=#1d485f,bg=#dd998a] CPU: #{cpu_percentage} #[bg=#c6e8f1] MEM: #{ram_percentage} '
-set-option -ag status-right "#[bg=#5fb1c2] BAT: #{battery_percentage} "
-set-option -ag status-right "#[bg=#fedaae] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
+set-option -g status-right '#[fg=colour15, bg=colour7] CPU: #{cpu_percentage} #[bg=colour8] MEM: #{ram_percentage} '
+#set-option -ag status-right "#[bg=#5fb1c2] BAT: #{battery_percentage} "
+set-option -ag status-right "#[fg=colour15, bg=colour9] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
 
 #Windows
-setw -g window-status-current-style 'fg=#0d485f bg=#feaf3c bold'
+setw -g window-status-current-style 'fg=colour0 bg=colour5 bold'
 setw -g window-status-current-format ' #I  #W '
-setw -g window-status-style 'fg=#1d485f bg=#008eab'
+setw -g window-status-style 'fg=colour15 bg=colour8'
 setw -g window-status-format ' #I  #W '
 setw -g window-status-separator ""
 
