--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,7 @@ set -g @suspend_suspended_options " \
   window-status-last-style:gw:fg=brightblack, \
   window-status-style:gw:bg=black\\,fg=brightblack, \
   @mode_indicator_custom_prompt:: ---- , \
-  @mode_indicator_custom_mode_style::bg=brightblack\\,fg=black, \
+  @mode_indicator_custom_mode_style::bg=colour15\\,fg=black, \
 "
 
 #
@@ -60,12 +60,12 @@ set-option -g status-position bottom
 set-option -g status-style "bg=colour4"
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=colour0]:[#S]@#H "
+set-option -g status-left "#[fg=colour0, bg=colour1]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
 set-option -g status-right '#[fg=colour15, bg=colour7] CPU: #{cpu_percentage} #[bg=colour8] MEM: #{ram_percentage} '
 #set-option -ag status-right "#[bg=#5fb1c2] BAT: #{battery_percentage} "
-set-option -ag status-right "#[fg=colour15, bg=colour9] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
+set-option -ag status-right "#[fg=colour15, bg=colour2] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
 
 #Windows
 setw -g window-status-current-style 'fg=colour0 bg=colour5 bold'
