--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,15 +60,15 @@ set-option -g status-position bottom
 set-option -g status-style "bg=colour4"
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=colour0, bg=colour1]:[#S]@#H "
+set-option -g status-left "#[fg=colour7, bg=colour1j bold]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
-set-option -g status-right '#[fg=colour15, bg=colour7] CPU: #{cpu_percentage} #[bg=colour8] MEM: #{ram_percentage} '
+set-option -g status-right '#[fg=colour15, bg=colour9] CPU: #{cpu_percentage} #[bg=colour8] MEM: #{ram_percentage} '
 #set-option -ag status-right "#[bg=#5fb1c2] BAT: #{battery_percentage} "
 set-option -ag status-right "#[fg=colour15, bg=colour2] %a%l:%M:%S %p #[default]#{tmux_mode_indicator}"
 
 #Windows
-setw -g window-status-current-style 'fg=colour0 bg=colour5 bold'
+setw -g window-status-current-style 'fg=colour7 bg=colour5 bold'
 setw -g window-status-current-format ' #I  #W '
 setw -g window-status-style 'fg=colour15 bg=colour8'
 setw -g window-status-format ' #I  #W '
