--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,7 +60,7 @@ set-option -g status-position bottom
 set-option -g status-style "bg=colour4"
 set-option -g status-left-length 40
 set-option -g status-left-style default
-set-option -g status-left "#[fg=colour7, bg=colour1j bold]:[#S]@#H "
+set-option -g status-left "#[fg=colour7, bg=colour1 bold]:[#S]@#H "
 set-option -g status-right-length 140
 set-option -g status-right-style default
 set-option -g status-right '#[fg=colour15, bg=colour9] CPU: #{cpu_percentage} #[bg=colour8] MEM: #{ram_percentage} '
