--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -4,7 +4,7 @@ font:
   normal:
     family: 'Iosevka Term'
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    #style: Bold
 
   offset:
     x: 0
