--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -18,41 +18,46 @@ font:
     y: 0
 
 colors:
-  # Default colors
   primary:
-    background: '#061923'
-    foreground: '#e5c49e'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
+    background: "0x191724"
+    foreground: "0xe0def4"
   cursor:
-    text: '#061822'
-    cursor: '#feaf3c'
-
+    text: "0xe0def4"
+    cursor: "0x524f67"
+  vi_mode_cursor:
+    text: "0xe0def4"
+    cursor: "0x524f67"
+  line_indicator:
+    foreground: None
+    background: None
   selection:
-    text: '#ffe9d7'
-    background: '#265b75'
-
-  # Normal colors
+    text: "0xe0def4"
+    background: "0x403d52"
   normal:
-    black: '#283034'
-    red: '#ff2e97'
-    green: '#62a9cf'
-    yellow: '#ffd400'
-    blue: '#42c6ff'
-    magenta: '#ff2afc'
-    cyan: '#42c6ff'
-    white: '#d9e0e9'
-
-  # Bright colors
+    black: "0x26233a"
+    red: "0xeb6f92"
+    green: "0x31748f"
+    yellow: "0xf6c177"
+    blue: "0x9ccfd8"
+    magenta: "0xc4a7e7"
+    cyan: "0xebbcba"
+    white: "0xe0def4"
   bright:
-    black: '#435056'
-    red: '#ff2e97'
-    green: '#add0e5'
-    yellow: '#ffd400'
-    blue: '#42c6ff'
-    magenta: '#ff2afc'
-    cyan: '#42c6ff'
-    white: '#f4f6f9'
+    black: "0x6e6a86"
+    red: "0xeb6f92"
+    green: "0x31748f"
+    yellow: "0xf6c177"
+    blue: "0x9ccfd8"
+    magenta: "0xc4a7e7"
+    cyan: "0xebbcba"
+    white: "0xe0def4"
+  hints:
+    start:
+      foreground: "#908caa"
+      background: "#1f1d2e"
+    end:
+      foreground: "#6e6a86"
+      background: "#1f1d2e"
 
 cursor: 
   style: Block
