remvoe pane keybing / add pain-control plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,22 +29,7 @@ set -g @suspend_suspended_options " \
   @mode_indicator_custom_mode_style::bg=colour15\\,fg=black, \
 "
 
-#
 bind R refresh-client
-#
-#bind j resize-pane -D 5 
-#bind k resize-pane -U 5 
-#bind l resize-pane -L 5 
-#bind h resize-pane -R 5 
-
-#select pane
-
-
-#split pane with | and - 
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
 
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
@@ -79,6 +64,7 @@ setw -g window-status-separator ""
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'MunifTanjim/tmux-suspend'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
