use CTRL+SPACE as prefix key

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,8 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-space
+bind-key C-space send-prefix
 
 unbind r
 bind r source-file ~/.tmux.conf \;\
