--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,6 +65,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'MunifTanjim/tmux-suspend'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'Morantron/tmux-fingers'
 
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
