tmux: change prefix key back to ^A

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind C-b
-set-option -g prefix C-space
+set-option -g prefix C-a
 bind-key C-space send-prefix
 
 unbind r
